# bank-data-tables

./: .gitignore  Pipfile  README.md  gitignore  pyproject.toml  requirements.txt
sql/: bank_features_batv2_1.sql  pull_data.sql
src/bank_data_tables/: flatten_data.py  get_execution_records.py  get_sql_list.py  save_to_database.py  tabularize_data.py
table_columns/: bank_features_batv2_1.csv
